QA fixeses for Media Block
- Media Block Callout: Set max width on text so it doesn’t get too long, more padding top + bottom
- Caret Block: Center caret

--- a/src/assets/scss/components/_mediablock.scss
+++ b/src/assets/scss/components/_mediablock.scss
@@ -87,12 +87,14 @@
 
     @media #{$medium-up} {
         flex: 2;
-        padding: 5rem 3rem;
+        padding: 6rem 3rem;
     }
 
     .type--callout {
         color: #fff;
+        margin: auto;
         margin-bottom: 1rem;
+        max-width: 45rem;
 
         @media #{$medium-up} {
             margin-bottom: 1rem;
